--- a/HE170292_SE1814-NET_A01/appsettings.json
+++ b/HE170292_SE1814-NET_A01/appsettings.json
@@ -11,5 +11,11 @@
     },
     "AdminSettings": {
         "AdminRole": "3"
+    },
+    "AdminAccount": {
+        "AccountName": "Admin",
+        "AccountEmail": "admin@example.com",
+        "AccountRole": "Admin",
+        "AccountPassword": "@1"
     }
 }
